--- a/main.css
+++ b/main.css
@@ -7,13 +7,21 @@ main {
 header {
   margin-top: 0px;
   background-color: #404041;
+  height: 20%;
   text-align: center;
+  font-size: 32px;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 700;
+  font-weight: bold;
   color: #ED458B
 }
 h1 {
   margin-top: 0px;
+}
+#last-guess-was {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  margin-bottom: 5%;
+  color: #404041
 }
 .top-section {
   padding: 20%;
@@ -23,7 +31,6 @@ h1 {
   padding-left: 40%;
   display: inline-block;
   margin: auto;
-}
 }
 .bottom-section {
   padding-left: 50%;
@@ -52,7 +59,12 @@ button {
   height: 40px;
   font-family: 'Open Sans', sans-serif;
   font-size: 12pt;
+  text-align: center;
   color: #FFFFFF;
+}
+#reset-button {
+  width: 300px;
+  text-align: center;
 }
 
 .dis-button {
