--- a/main.css
+++ b/main.css
@@ -1,9 +1,7 @@
 body {
   margin: 0px;
 }
-main {
-  margin: auto;
-}
+
 header {
   margin-top: 0px;
   background-color: #404041;
@@ -14,26 +12,49 @@ header {
   font-weight: bold;
   color: #ED458B
 }
+
 h1 {
   margin-top: 0px;
 }
+
 #last-guess-was {
   text-align: center;
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 5%;
+  font-size: 1.8em;
+  color: #404041
+
+}
+#last-guess {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  color: #ED458B;
+  font-size: 12em;
+}
+
+#result-text {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  margin-bottom: 5%;
+  font-size: 1.8em;
   color: #404041
 }
+
+#user-range-input {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  margin-bottom: 5%;
+  padding-left: 10%;
+}
+
 .top-section {
   padding: 20%;
   padding-top: 3%;
-}
-.top-section {
-  padding-left: 40%;
   display: inline-block;
   margin: auto;
 }
+
 .bottom-section {
-  padding-left: 50%;
   display: inline-block;
   margin: 0 auto;
 }
@@ -42,41 +63,83 @@ h1 {
   font-weight: 300;
   /*why is font-weight not working?*/
 }
+
+main {
+  margin: 10% auto 0;
+  width: 85%;
+}
+
 #user-guess {
-  width: 300px;
-  height: 40px;
-  font-size: 20pt;
-  font-family: 'Open Sans', sans-serif;
+  width: 95%;
+  font-size: 1.5em;
   font-weight: 300;
   border: 2px solid #D3D4D5;
-  margin-left: 40%;
+  margin-bottom: 5%;
+  padding: 3%
+  /*width: 10.5em;
+  height: 1.5em;
+  font-size: 1.5em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;*/
+  /*margin-left: 40%;*/
+}
+
+.min-input, .max-input {
+    border: 2px solid #D3D4D5;
+    font-size: 1.5em;
+    font-weight: 300;
 }
 
 button {
   background-color: #929497;
   border-radius: 50pt;
-  width: 150px;
-  height: 40px;
+  border-width: 0;
+  margin-bottom: 1em;
+  width: 12em;
+  height: 2em;
   font-family: 'Open Sans', sans-serif;
   font-size: 12pt;
   text-align: center;
   color: #FFFFFF;
 }
-#reset-button {
-  width: 300px;
+/*#reset-button {*/
+  /*width: 300px;
   text-align: center;
-}
+}*/
 
 .dis-button {
   background-color: #D0D2D3;
 }
 
-#guess-button:hover {
+:disabled {
+  background-color: #D0D2D3;
+}
+
+button:hover:enabled {
   background-color: #EB008B;
 }
-#clear-button:hover {
-  background-color: #EB008B;
+
+#user-control-value {
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  margin-bottom: 5%;
+  font-size: 1.8em;
+  color: #404041
 }
-#reset-button:hover {
-  background-color: #EB008B;
+
+#reset-button {
+  margin-left: : 25%;
+}
+
+/*greater than 480px*/
+@media screen and (min-width: 480px) {
+
+#user-guess {
+  width: 60%;
+  font-size: 1.5em;
+  font-weight: 300;
+  padding: 5px;
+  margin-left: 20%;
+}
+
 }
